# smolix

./: README.org  flake.nix  renovate.json
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/parser/tests/: test.rs
crates/smolix-build/: Cargo.toml
crates/smolix-build/src/: main.rs
