[package]
name = "smolix-parser"
version = "0.0.1"
edition = "2021"

[dependencies]
chumsky = { git = "https://github.com/zesterer/chumsky", version = "1.0.0-alpha.7", default-features = false, features = ["either", "label", "pratt"] }

[dev-dependencies]
ariadne = { version = "0.4.1", features = [] }
