[package]
name = "smolix-build"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = { version = "0.4.1", features = ["auto-color"] }
petgraph = "0.6.5"
ratatui = { version = "0.28.0", features = [] }
rayon = "1.10.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
